--- a/otoiawase.html
+++ b/otoiawase.html
@@ -5,9 +5,9 @@
     <input type="checkbox" class="menu-btn" id="menu-btn">
     <label for="menu-btn" class="menu-icon"><span class="navicon"></span></label>
     <ul class="menu">
-      <li class="top"><a href="home/home.html">ホーム</a></li>
-      <li><a href="https://sshhuunnggoo.github.io/free-photos-news/">お問い合わせ</a></li>
-      <li><a href="news/news.html">お知らせ</a></li>
+      <li class="top"><a href="https://sshhuunnggoo.github.io/freephotos/">ホーム</a></li>
+      <li><a href="otoiawase.html">お問い合わせ</a></li>
+      <li><a href="https://sshhuunnggoo.github.io/free-photos-news/">お知らせ</a></li>
     </ul>
 
   </header>
