--- a/otoiawase.html
+++ b/otoiawase.html
@@ -6,7 +6,7 @@
     <label for="menu-btn" class="menu-icon"><span class="navicon"></span></label>
     <ul class="menu">
       <li class="top"><a href="https://sshhuunnggoo.github.io/freephotos/">ホーム</a></li>
-      <li><a href="otoiawase.html">お問い合わせ</a></li>
+      <li><a href="https://sshhuunnggoo.github.io/FPo/">お問い合わせ</a></li>
       <li><a href="https://sshhuunnggoo.github.io/free-photos-news/">お知らせ</a></li>
     </ul>
 
